--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -72,7 +72,7 @@ layout: default
                       <!-- https://mycyberuniverse.com/web/social-media-share-bar-jekyll-blog-website.html -->
                       <div class="share-buttons">
                           <a
-                            href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | absolute_url }}"
+                            href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ site.baseurl }}{{ page.url }}"
                             class="share-buttons__button share-buttons__button--facebook"
                             onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
                             title="Share on Facebook" >
